syntax = "proto3";
package common;

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/common/v1;commonpb";

import "google/protobuf/struct.proto";

// Central, robust, extensible metadata for all services
//
// - All shared fields are available to every service.
// - The service_specific field allows each service to store its own custom, structured data under a namespaced key (e.g., "content", "commerce").
// - The knowledge_graph field is for graph enrichment and relationships.
message Metadata {
  google.protobuf.Struct scheduling = 1;         // General scheduling and orchestration fields
  repeated string features = 2;                  // Feature toggles (e.g., ["referral", "notification"])
  google.protobuf.Struct custom_rules = 3;       // Custom rules (e.g., {max_referrals: 10})
  google.protobuf.Struct audit = 4;              // Audit info (created_by, history, etc.)
  repeated string tags = 5;                      // Tags for search, analytics, etc.
  google.protobuf.Struct service_specific = 6;   // Service-specific extensions (e.g., {"content": {...}})
  google.protobuf.Struct knowledge_graph = 7;    // For knowledge graph enrichment
  TieredTax taxation = 8;
  OwnerMetadata owner = 9;
  ReferralMetadata referral = 10;
  google.protobuf.Struct versioning = 11; // System/service/user/environment versioning and traceability
}

message TieredTax {
  int32 min_projects = 1;
  int32 max_projects = 2; // null = unlimited
  double percentage = 3;
}

message TaxationConnector {
  string type = 1; // "creator" or "referral"
  string recipient = 2; // e.g., "nmxmxh"
  string recipient_wallet = 3;
  double percentage = 4;
  repeated TieredTax tiered = 5;
  string applied_on = 6;
  string domain = 7;
  bool default = 8;
  bool enforced = 9;
  string justification = 10;
}

message Taxation {
  repeated TaxationConnector connectors = 1;
  int32 project_count = 2;
  double total_tax = 3;
}

message OwnerMetadata {
  string id = 1;
  string wallet = 2;
}

message ReferralMetadata {
  string id = 1;
  string wallet = 2;
} 