syntax = "proto3";

package common;

import "common/v1/metadata.proto";
import "common/v1/payload.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/common/v1;commonpb";

// The canonical envelope for all orchestration events.
message OrchestrationEvent {
  string type = 1; // "orchestration.error" or "orchestration.success"
  OrchestrationPayload orchestration = 2;
  string version = 3; // Envelope version for evolution
  // Canonical, extensible payload for event-specific data
  common.Payload payload = 4; 
}

// The payload for orchestration events.
message OrchestrationPayload {
  string code = 1; // e.g., "INTERNAL", "OK"
  string message = 2;
  common.Metadata metadata = 3; // Canonical, versioned metadata
  string yin_yang = 4; // "yin" (error) or "yang" (success)
  string correlation_id = 5;
  string service = 6;
  string entity_id = 7;
  google.protobuf.Timestamp timestamp = 8;
  string environment = 9; // e.g., "prod", "staging"
  string actor_id = 10; // User or system actor
  string request_id = 11; // For tracing
  repeated string tags = 12; // For analytics, routing, etc.
  // For future extensibility (e.g., custom payloads)
  google.protobuf.Any extra = 13; 
} 